bsdgrep: fix regression in the -f option since r268799

Caused by an incomplete merge from NetBSD.

PR:		198725
MFC after:	3 days

Former-commit-id: 651c591dba9c4b99dcbfed73760085871e2c1d29